--- a/src/catalog.html
+++ b/src/catalog.html
@@ -57,7 +57,7 @@
                     </span>
                     <label class="theme-switch">
                         <input type="checkbox">
-                        <div class="slider round"></div>
+                        <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="header__social">
@@ -76,7 +76,7 @@
                         <a href="mailto:quickrepairgr@gmail.com">quickrepairgr@gmail.com</a>
                     </div>
                 </div>
-                <button class="button"><a href="contacts.html#request">Оставить заявку</a></button>
+                <a href="contacts.html#request" class="button">Оставить заявку</a>
             </div>
         </div>
         <div class="subheader">
@@ -132,8 +132,8 @@
                     <p data-aos="fade-up" data-aos-delay="50" class="hero__text_descr">Мы - профессионалы в ремонте
                         ноутбуков и компьютерной техники с более
                         чем 10-летним опытом.</p>
-                    <button data-aos="fade-up" data-aos-delay="100" class="button button-big button-center-phone"><a
-                            href="#catalog">Посмотреть услуги</a></button>
+                    <a href="#catalog" data-aos="fade-up" data-aos-delay="100"
+                        class="button button-big button-center-phone">Посмотреть услуги</a>
                 </div>
             </div>
         </section>
@@ -160,7 +160,7 @@
                 <div id="modal-1" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
-                    <img src="./img/catalog-photos/network.png" alt="фото настройки сети" >
+                        <img src="./img/catalog-photos/network.png" alt="фото настройки сети">
 
                         <h2>Сетевая настройка</h2>
                         <p>Настройка сети — это ключевой этап для обеспечения стабильной и безопасной работы ваших
@@ -213,7 +213,7 @@
                             </li>
                         </ul>
 
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
                     </div>
                 </div>
 
@@ -234,7 +234,7 @@
                 <div id="modal-2" class="modal-catalog">
                     <div class="modal-catalog-content">
                         <span class="close-btn">&times;</span>
-                    <img src="./img/catalog-photos/printer.png" alt="принтер" >
+                        <img src="./img/catalog-photos/printer.png" alt="принтер">
 
                         <h2>Ремонт периферии</h2>
                         <p>Предоставляем профессиональный ремонт и обслуживание периферийных устройств: принтеров,
@@ -284,7 +284,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -356,7 +356,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -426,7 +426,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -497,7 +497,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -566,7 +566,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -636,7 +636,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -705,7 +705,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
@@ -777,7 +777,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <button class="button"><a href="contacts.html#request">Заказать услугу</a></button>
+                        <a href="contacts.html#request" class="button">Заказать услугу</a>
 
                     </div>
                 </div>
