--- a/src/contacts.html
+++ b/src/contacts.html
@@ -57,7 +57,7 @@
                     </span>
                     <label class="theme-switch">
                         <input type="checkbox">
-                        <div class="slider round"></div>
+                        <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="header__social">
@@ -76,7 +76,7 @@
                         <a href="mailto:quickrepairgr@gmail.com">quickrepairgr@gmail.com</a>
                     </div>
                 </div>
-                <button class="button"><a href="contacts.html#request">Оставить заявку</a></button>
+                <a href="contacts.html#request" class="button">Оставить заявку</a>
             </div>
         </div>
         <div class="subheader">
@@ -132,8 +132,9 @@
                     <p data-aos="fade-up" data-aos-delay="50" class="hero__text_descr">Мы всегда на связи, чтобы
                         ответить на ваши вопросы и помочь с ремонтом техники. Позвоните, напишите или посетите наш офис
                         — мы рядом, когда это нужно!</p>
-                    <button data-aos="fade-up" data-aos-delay="100" class="button button-big button-center-phone"><a
-                            href="#request">Оставить заявку</a></button>
+                    <a href="#request" data-aos="fade-up" data-aos-delay="100"
+                        class="button button-big button-center-phone">
+                        Оставить заявку</a>
                 </div>
             </div>
         </section>
@@ -165,7 +166,8 @@
                 </div>
                 <iframe data-aos="flip-right" data-aos-delay="50"
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A40009503927fbbbe53b6288e6d4a362716174108c1ad5d24668e8b05d865e9b1&amp;source=constructor"
-                    width="650" height="550" frameborder="0"></iframe>
+                    width="650" height="550" style="border: none;"></iframe>
+
             </div>
         </section>
 
@@ -215,7 +217,7 @@
                         </div>
                         <div>
                             <label for="date">Дата:</label>
-                            <input type="date" id="date" name="date" min="" required>
+                            <input type="date" id="date" name="date" required>
                         </div>
                     </div>
 
@@ -291,7 +293,8 @@
             <hr>
             <div class="footer__copyright">
                 Copyright 2024, ВСЕ ПРАВА ЗАЩИЩЕНЫ
-                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up-light.svg" alt="стрелка вверх"></a>
+                <a class="arrow-up" href="#"><img id="arrow-up" src="./icons/arrow-up-light.svg"
+                        alt="стрелка вверх"></a>
 
             </div>
         </div>
