--- a/src/profile.html
+++ b/src/profile.html
@@ -65,7 +65,7 @@
                     </span>
                     <label class="theme-switch">
                         <input type="checkbox">
-                        <div class="slider round"></div>
+                        <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="header__social">
@@ -84,7 +84,7 @@
                         <a href="mailto:quickrepairgr@gmail.com">quickrepairgr@gmail.com</a>
                     </div>
                 </div>
-                <button class="button"><a href="contacts.html#request">Оставить заявку</a></button>
+                <a href="contacts.html#request" class="button">Оставить заявку</a>
             </div>
         </div>
         <div class="subheader">
