loading speed fixes

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -171,7 +171,7 @@
                         <p>График работы: 9:00 - 18:00 Пн-Пт</p>
                     </div>
                 </div>
-                <iframe data-aos="flip-right" data-aos-delay="50"
+                <iframe title="map" data-aos="flip-right" data-aos-delay="50"
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A40009503927fbbbe53b6288e6d4a362716174108c1ad5d24668e8b05d865e9b1&amp;source=constructor"
                     width="650" height="550" style="border: none;"></iframe>
 
