--- a/src/contacts.html
+++ b/src/contacts.html
@@ -107,7 +107,7 @@
                 <div class="subheader__login-wrapper">
                     <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
                 </div>
-                <button class="hamburger">
+                <button aria-label="Меню-гамбургер" class="hamburger">
                     <span></span>
                     <span></span>
                     <span></span>
