icons errors on console and title icons fix

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -832,7 +832,7 @@
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__logo">
-                    <img class="icon-logo" src="icons/logo.svg" alt="логотип">
+                    <img class="icon-logo" src="icons/logo-light.svg" alt="логотип">
                     <div class="logo_text">
                         <div class="logo_title">Quick</div>
                         <div class="logo_subtitle">Repair</div>
@@ -850,17 +850,17 @@
                     <h5>Контактная информация</h5>
                     <div class="footer__social">
                         <div class="footer__social_item">
-                            <img class="icon-geo" src="icons/geo-location.svg" alt="Иконка геолокации">
+                            <img class="icon-geo" src="icons/geo-location-light.svg" alt="Иконка геолокации">
                             <a
                                 href="https://yandex.ru/maps/20121/gryazovets/house/ulitsa_lenina_53_66/YEkYdAJjTUcAQFtifXR2eH5nbQ==/?ll=40.253422%2C58.879273&z=20.08">Найди
                                 нас на карте</a>
                         </div>
                         <div class="footer__social_item">
-                            <img class="icon-phone" src="icons/phone.svg" alt="Иконка телефона">
+                            <img class="icon-phone" src="icons/phone-light.svg" alt="Иконка телефона">
                             <a href="tel:+79815061868">+7 (981) 506-18-68</a>
                         </div>
                         <div class="footer__social_item">
-                            <img class="icon-email" src="icons/email.svg" alt="Иконка почты">
+                            <img class="icon-email" src="icons/email-light.svg" alt="Иконка почты">
                             <a href="mailto:quickrepairgr@gmail.com">quickrepairgr@gmail.com</a>
                         </div>
                     </div>
