--- a/src/contacts.html
+++ b/src/contacts.html
@@ -173,7 +173,9 @@
                 </div>
                 <iframe title="map" data-aos="flip-right" data-aos-delay="50"
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A40009503927fbbbe53b6288e6d4a362716174108c1ad5d24668e8b05d865e9b1&amp;source=constructor"
-                    width="650" height="550" style="border: none;"></iframe>
+                    width="650" height="550" style="border: none;" loading="lazy"
+                    sandbox="allow-scripts allow-same-origin allow-popups">>
+                </iframe>
 
             </div>
         </section>
