--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
-    <!-- <script defer src="./js/script.min.js"></script> -->
+    <script defer src="./js/script.min.js"></script>
     <title>Quick Repair</title>
 </head>
 
@@ -565,7 +565,6 @@
     <script>
         AOS.init();
     </script>
-    <script type="module" src="./js/script.min.js"></script>
 
 
 </body>
